Can move controller position with arrow keys.

--- a/style.css
+++ b/style.css
@@ -45,6 +45,10 @@ main {
   background: lightgray;
 }
 
+.controller-cell[aria-selected=true]{
+  background: lightcoral;
+}
+
 
 #controller-column,
 .game-board-column {
